--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .redoGrid{
